--- a/src/partials/customer.html
+++ b/src/partials/customer.html
@@ -1,51 +1,86 @@
 <section class="section__customer">
     <div class="customer container">
 
-        <picture>
-            <source srcset="
-                    ./images/desktop/customer/testimonials1-x1.png    1x,
-                    ./images/desktop/customer/testimonials1-x2.png 2x
-                    " media="(min-width:1280px)" />
-            <source srcset="
-                    ./images/tablet/customer/testimonials1-x1.png    1x,
-                    ./images/tablet/customer/testimonials1-x2.png 2x
-                    " media="(min-width:768px)" />
-            <source srcset="
-                    ./images/mobile/customer/testimonials1-x1.png    1x,
-                    ./images/mobile/customer/testimonials1-x2.png 2x
-                    " media="(min-width:320px)" />
-            <img class="about__image" src="./images/mobile/customer/testimonials1-x1.png" width="100%"
-                alt="Customer" />
-        </picture>
-        <div class="customer-rew">
-            <div class="customer-rew__text customer-rew__grad">
-                <p class="customer-rew__text-box">Nullam viverra consectetuer.
-                Quisque cursus et, porttitor risus.
-                Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                congue. Lorem ipsum primis in nibh vel risus.
-                </p>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active"> 
+                    <picture>                      
+                        <source srcset="
+                                ./images/mobile/customer/testimonials1-x1.png    1x,
+                                ./images/mobile/customer/testimonials1-x2.png 2x
+                                " media="(min-width:320px)" />
+                    <img class=" customer__image" src="./images/mobile/customer/testimonials1-x1.png" width="50" alt="Customer" />
+                    <div class="customer-rew">
+                        <div class="customer-rew__text customer-rew__grad">
+                            <p class="customer-rew__text-box">Nullam viverra consectetuer.
+                                Quisque cursus et, porttitor risus.
+                                Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                                congue. Lorem ipsum primis in nibh vel risus.
+                            </p>
+                    
+                        </div>
+                    </div>
+                    <p class="customer__name"> Stefania, Kalush</p>
+                </div>
+                <div class="carousel-item">
+            <picture>
+                <source srcset="
+                        ./images/mobile/customer/testimonials2-x1.png    1x,
+                        ./images/mobile/customer/testimonials2-x2.png 2x
+                        " media="(min-width:320px)" />
+                <img class="customer__image" src="./images/mobile/customer/testimonials2-x1.png" width="50" alt="Customer" />
+                <div class="customer-rew">
+                    <div class="customer-rew__text customer-rew__grad">
+                        <p class="customer-rew__text-box">Nullam viverra consectetuer.
+                            Quisque cursus et, porttitor risus.
+                            Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                            congue. Lorem ipsum primis in nibh vel risus.
+                        </p>
                 
+                    </div>
+                </div>
+                <p class="customer__name">Joe, Kyiv </p>
+                </div>
+                <div class="carousel-item">
+                    <picture>
+                        <source srcset="
+                            ./images/mobile/customer/testimonials3-x1.png    1x,
+                            ./images/mobile/customer/testimonials3-x2.png 2x
+                            " media="(min-width:320px)" />
+                        <img class="customer__image" src="./images/mobile/customer/testimonials3-x1.png" width="50" alt="Customer" />
+                    <div class="customer-rew">
+                        <div class="customer-rew__text customer-rew__grad">
+                            <p class="customer-rew__text-box">Nullam viverra consectetuer.
+                                Quisque cursus et, porttitor risus.
+                                Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                                congue. Lorem ipsum primis in nibh vel risus.
+                            </p>
+                    
+                        </div>
+                    </div>
+                    <p class="customer__name">Emily, Los Angeles</p>
+                </div>
             </div>
-        </div>
-        <p class="customer__name">Emily, Los Angeles</p>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon carousel-control-prev-icon--left" aria-hidden="true">
+                    <svg class="customer_3circle__icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-arrow"></use>
+                    </svg>
 
-        <ul class="customer_home-circle list">
-            <li class="item">
-                <svg class="customer_3circle__icon" width="12" height="12">
-                    <use href="./images/icons.svg#icon-home"></use>
-                </svg>
-            </li>
-            <li class="item ">
-                <svg class="customer_3circle__icon" width="12" height="12">
-                    <use href="./images/icons.svg#icon-circle-grey"></use>
-                </svg>
-            </li>
-            <li class="item">
-                <svg class="customer_3circle__icon" width="12" height="12">
-                    <use href="./images/icons.svg#icon-circle-grey"></use>
-                </svg>
-            </li>
-        </ul>
+                </span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true">
+                    <svg class="customer_3circle__icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-arrow"></use>
+                    </svg>
+                </span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+
     </div>
 
 </section>
