--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,8 +3,9 @@
     <p class="products__label">100% natural</p>
     <h2 class="products__title">products</h2>
     <ul class="products__list">
+
       <li class="products__item">
-        <div class="inner-content">
+        <div class="inner-milkshakes">
           <h3 class="products__title products__title--white">ice cream</h3>
           <p class="products__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -22,7 +23,7 @@
       </li>
 
       <li class="products__item products__item--ice-coffee">
-        <div class="inner-ice-coffee">
+        <div class="inner-milkshakes inner-milkshakes--nude">
           <h3 class="products__title products__title--white">ice coffee</h3>
           <p class="products__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -40,7 +41,7 @@
       </li>
 
       <li class="products__item products__item--milkshakes">
-        <div class="inner-milkshakes">
+        <div class="inner-milkshakes inner-milkshakes--green">
           <h3 class="products__title products__title--white">milkshakes</h3>
           <p class="products__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
