--- a/src/sass/_customer.scss
+++ b/src/sass/_customer.scss
@@ -169,3 +169,31 @@
     right: 395px;
   }
 }
+
+.carousel-control-next{
+  right: -70px;
+  @include breakpoint(tablet){
+    right: -140px;
+  }
+}
+.carousel-control-prev {
+  left: -70px;
+    @include breakpoint(tablet) {
+        left: -140px;
+      }
+}
+
+.carousel-control-prev-icon, 
+.carousel-control-next-icon {
+  background-image: none;
+}
+
+.carousel-control-prev-icon--left{
+  transform: rotate(180deg);
+}
+.customer__image{
+  display: block;
+      margin-left: auto;
+        margin-right: auto;
+        width: 80px;
+}
