--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -369,12 +369,9 @@
 .inner-milkshakes {
   margin-top: auto;
   align-items: center;
-  // min-height: 489px;
   height: 489px;
-  background: #c2e297;
+  background-color: #ffb8ca;
   border-radius: 24px;
-  // display: flex;
-  // flex-direction: column;
   text-align: center;
   justify-content: end;
 
@@ -386,5 +383,11 @@
   @media screen and (min-width: 1280px) {
     // min-height: 535px;
     height: 535px;
+  }
+  &--nude{
+      background-color: #f0d1a5;
+  }
+  &--green{
+      background-color: #c2e297;
   }
 }
