fix mobile menu navigation

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -56,13 +56,7 @@
     </button>
 
     <div class="header__wrapper" data-menu>
-      <!-- <button type="button" class="nav__menu-button" data-button-close>
-        <svg class="nav__menu-icon" width="14" height="14">
-          <use href="./images/icons.svg#icon-close"></use>
-          
-        </svg>
-      </button> -->
-      <button data-modal-open="" type="button" class="header__button">
+      <button data-modal-open-mobile type="button" class="header__button">
         Buy now<svg class="header__button-icon" width="8" height="9">
           <use href="./images/icons.svg#icon-vector"></use>
         </svg>
@@ -70,7 +64,7 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a class="nav__link nav__link--current" href="#home">Home</a>
+            <a data-home class="nav__link nav__link--current" href="#home">Home</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#about">About us</a>
